--- a/webdev2/SincoreEricCSS.css
+++ b/webdev2/SincoreEricCSS.css
@@ -182,7 +182,7 @@ clear: both;
 }
 
 /* For mobile phones: */
-@media (max-width: 768px){
+@media screen and (max-width: 768px){
 [class*="col-"] {
     width: 100%;
 }
