--- a/webdev2/SincoreEricCSS.css
+++ b/webdev2/SincoreEricCSS.css
@@ -38,12 +38,6 @@ p {font-size:1.5vw;
 /*Border between column*/
 .line {border-right: 2px solid #091834;} 
 
-/*Border disappears when screen size smaller*/
-@media screen and (max-width: 600px){
-	.line {border-right: none;}
-}
-
-
 /*Nav Bar Style*/
 .menu {	overflow: hidden;
 		background-color: #448D76;
@@ -74,29 +68,6 @@ p {font-size:1.5vw;
 
 /*Hamburger icon*/
 .menu .icon{display: none;}
-
-/*Change navbar on screen size*/
-@media screen and (max-width: 600px) {
-  .menu a:not(:first-child) {display: none;}
-  .menu a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .menu.responsive {position: relative;}
-  .menu.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-	.menu.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
 
 /*Style for side bar information*/
 aside {width: 90%;
@@ -179,14 +150,6 @@ clear: both;
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
-}
-
-/* For mobile phones: */
-@media screen and (max-width: 768px){
-[class*="col-"] {
-    width: 100%;
-}
-}
 
 /*Border style*/
 .border {border-style: solid;
@@ -229,7 +192,7 @@ p.ad {width:100px;
 
 /*Animation for image continoulsy spinning*/
 img.spin {width: 90%;
-		height: auto%;
+		height: auto;
 		position: relative;
 		animation-name: spinning;
 		animation-duration: 12s;
@@ -242,11 +205,6 @@ img.spin {width: 90%;
 aside.scroll {height: 200px;
 			overflow: auto;
 }
-/*Set heigh to auto when screen size is smaller*/
-@media screen and (max-width: 600px){
-	aside.scroll {height: auto;}
-}
-
 
 /*Animation for bus moving*/
 img.drive {
@@ -412,3 +370,45 @@ input:valid {
   clear: both;
   display: table;
 }
+
+/*Border disappears when screen size smaller*/
+@media screen and (max-width: 600px){
+	.line {border-right: none;}
+}
+
+/*Change navbar on screen size*/
+@media screen and (max-width: 600px) {
+  .menu a:not(:first-child) {display: none;}
+  .menu a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .menu.responsive {position: relative;}
+  .menu.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+	.menu.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/* For mobile phones: */
+@media screen and (max-width: 768px){
+[class*="col-"] {
+    width: 100%;
+}
+}
+
+/*Set heigh to auto when screen size is smaller*/
+@media screen and (max-width: 600px){
+	aside.scroll {height: auto;}
+}
+
+
