--- a/webdev2/SincoreEricCSS.css
+++ b/webdev2/SincoreEricCSS.css
@@ -39,7 +39,7 @@ p {font-size:1.5vw;
 .line {border-right: 2px solid #091834;} 
 
 /*Border disappears when screen size smaller*/
-@media screen and (max-width: 300px){
+@media screen and (max-width: 300px) {
 	.line {border-right: none;}
 }
 
@@ -167,14 +167,14 @@ ul.reference {font-size: 1.5vw;
 }
 
 /* For mobile phones: */
-@media{
+@media screen{
 [class*="col-"] {
     width: 100%;
 }
 }
   
 /*For tablets*/
-@media only screen and (min-width: 600px) {
+@media screen and (min-width: 600px) {
 .col-s-1 {width: 8.33%;}
 .col-s-2 {width: 16.66%;}
 .col-s-3 {width: 25%;}
@@ -190,7 +190,7 @@ ul.reference {font-size: 1.5vw;
 }
 
 /*For Desktop*/
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
@@ -260,7 +260,7 @@ aside.scroll {height: 200px;
 			overflow: auto;
 }
 /*Set heigh to auto when screen size is smaller*/
-@media screen and (max-width: 300px){
+@media screen and (max-width: 300px) {
 	aside.scroll {height: auto;}
 }
 
