--- a/index.css
+++ b/index.css
@@ -1,131 +1,50 @@
-body {
-  background-color: #ffffff;
-  background-image: url("eagle.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position-y: 50%;
-  background-size: cover;
-  background-attachment: fixed;
-  font-family: Arial, Helvetica, sans-serif;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="This is a website for Sincores from Sincores">
+  <meta name="keywords" content="Recipees, Movies, TV Shows">
+  <meta name="author" content="Eric">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Eric's Kitchen & Cinema</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+  <header>
+    <h1>Sincore's Site</h1>
+    <p>Recipees & Movies</p>
+  </header>
 
-.header {
-  background-color: FloralWhite;
-  text-align: center;
-  border-style: none;
-  margin: 0px 0px 0px 0px;
-  padding: 10px;
-  font-family: Copperplate, Verdana, Georgia;
-  font-size: 2.5vw;
-  color: black;
-  letter-spacing: 7px;
-}
+  <nav>
+    <ul>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="movies.html">Movie Reviews</a></li>
+    </ul>
+  </nav>
 
+  <main>
+    <section class="intro">
+      <h2>Welcome!</h2>
+      <p>This is your go-to spot for delicious recipes and honest movie reviews. Dive in and share your thoughts!</p>
+    </section>
 
-ul.menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  width:100%;
-}
+    <section class="features">
+      <div class="feature-box">
+        <h3>🍽️ Explore Recipes</h3>
+        <p>Browse Eric’s favorite dishes, from breakfast to dessert. Got a twist? Suggest it!</p>
+        <a href="recipes.html" class="btn">View Recipes</a>
+      </div>
 
-li.menu {
-  float: left;
-}
+      <div class="feature-box">
+        <h3>🎬 Movie Reviews</h3>
+        <p>Read reviews, rate films, and suggest what Eric should watch next.</p>
+        <a href="movies.html" class="btn">Read Reviews</a>
+      </div>
+    </section>
+  </main>
 
-li.right {
-	float: right;
-}
-
-li.menu a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li.menu a:hover {
-  background-color: #111;
-}
-
-.active {
-  background-color: DarkRed;
-}
-
-ul.submenu {
-  list-style-type: none;
-  margin: 10px;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  width:58%;
-}
-
-li.submenu {
-  float: left;
-  border-right: 1px solid FloralWhite;
-}
-
-li a, .dropbtn{
-	display: inline-block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-}
-
-li a:hover, dropdown:hover .dropbtn{
-	background-color: #111;
-}
-
-li.dropdown {
-	display: inline-block;
-}
-
-.dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #333;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	padding: 12px 16px;
-	z-index: 1;
-}
-
-.dropdown-content a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	text-align:left;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-li:last-child {
-	border-right: none;
-}
-
-li.submenu a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li.submenu a:hover {
-  background-color: #111;
-}
-
-.dropdown-content a:hover{background-color: #f1f1f1;}
-
-
-
-
-
+  <footer>
+    <p>© 2025 Sincore's Site</p>
+  </footer>
+</body>
+</html>
